# Matilda-Cartesia

./: .gitignore  check_midi_ports.py  demo.mid  live_arp_garageband.py  live_cartesia.py  live_euclidean_c_major.py  live_euclidean_c_minor.py  live_legato_euclidean.py  live_teleiso.py  make_demo_mid.py  teleiso_hybrid.py
.github/workflows/: matilda-ci.yml  matilda-release.yml
cartesia/: __init__.py  engine.py  model.py  movement.py  runner.py
cartesia-vst-ui/: index.html  package-lock.json  package.json  vite.config.ts
cartesia-vst-ui/src/: App.tsx  auroraConfig.ts  cellState.ts  heroLayout.ts  index.css  pluginVersion.ts  rasterImageStyle.ts  scaleConfig.ts  shellLayout.ts  transportConfig.ts  uiScale.ts
cartesia-vst-ui/src/components/: AuroraShader.tsx  CellAnatomyStates.tsx  ClickableGemButton.tsx  CollapseToggle.tsx  DawSyncToggle.tsx  GemSparks.tsx  Grid4x4.tsx  HeroCanvas.tsx  LayerMiniGrid.tsx  Led.tsx  MatildaPluginFrame.tsx  MatildaShell.tsx  MiniKnob.tsx  MovementMenu.tsx  PressableIconButton.tsx  ScaleGemOrb.tsx  ScalePanel.tsx  SequencerKnob.tsx  ShellFrameOverlay.tsx  ShellGlassBedding.tsx  TransportChrome.tsx  UiResizeGrip.tsx  glassDropdownStyle.ts  knobColors.ts  shellGlassStyle.ts  useHoverTip.ts
cartesia-vst-ui/src/engine/: engine.ts  index.ts  model.ts  movement.ts  pitch.ts
cartesia-vst-ui/src/hooks/: useClickOutside.ts  useMatildaEngine.ts
cartesia-vst-ui/src/presets/: default.layer1.json
docs/cartesia-vst/: ARCHITECTURE.md  BLUEARP-ENHANCEMENTS.md  DESIGN.md  FIGMA-CHECKLIST.md  MILESTONES.md  PRD-SANDBOX.md  REACT-SHELL-JUCE.md  README.md  SPEC.md
docs/isobar-noob-guide/: README.md
examples/: arp_minor.teleiso  euclidean_c_major.teleiso  euclidean_c_minor.teleiso  legato_euclidean.teleiso
examples/cartesia/: default.preset.json  scan_reverse.preset.json
gridwalker/: CMakeLists.txt  README.md
gridwalker/Source/: GridComponent.cpp  GridComponent.h  GridEngine.cpp  GridEngine.h  GridWalkerLookAndFeel.cpp  GridWalkerLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
matilda/: README.md
matilda/assets/figma/: README.md
matilda/plugin/: CMakeLists.txt  README.md
matilda/plugin/Source/: CartesiaCellLighting.h  FiligreeDrawing.h  GlassDropdownDrawing.h  HeroBackdropDrawing.h  KnobDrawing.h  MatildaBackground.cpp  MatildaFonts.cpp  MatildaFonts.h  MatildaImages.cpp  MatildaImages.h  MatildaLookAndFeel.h  MovementLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReactShellLayout.h  ScaleGemPalette.h  ScaleLayout.h  ShellGlassDrawing.cpp  TransportConfig.h  TransportLayout.h  UiDevConfig.h
matilda/plugin/Source/Components/: CollapseToggle.cpp  CollapseToggle.h  DawSyncToggle.cpp  DawSyncToggle.h  GemCell.cpp  GemCell.h  GemGrid.h  GemSparksOverlay.cpp  GemSparksOverlay.h  HeroCanvas.cpp  LayerCrystalBar.h  LayerOverview.h  MatildaShellPanel.h  MovementSelector.cpp  MovementSelector.h  NativePluginFrame.cpp  NativePluginFrame.h  QuantisePanel.cpp  ShellChrome.cpp  StepPathStrip.h  TransportBar.cpp  TransportBar.h
matilda/plugin/Source/Engine/: ClockDivisions.h  PatchStore.cpp  ScaleConfig.h  SequencerEngine.cpp  SequencerEngine.h
matilda/plugin/releases/: README.md  v1.0.4-notes.md  v1.0.5-notes.md  v1.0.6-notes.md  v1.0.7-notes.md  v1.0.8-notes.md  v1.0.9-notes.md
matilda/plugin/releases/macOS/Matilda.vst3/Contents/: Info.plist
matilda/plugin/releases/macOS/Matilda.vst3/Contents/Resources/: moduleinfo.json
matilda/plugin/releases/macOS/Matilda.vst3/Contents/_CodeSignature/: CodeResources
matilda/standalone/: .gitkeep  CMakeLists.txt  README.md
matilda/standalone/Source/: CartesiaGridLayout.h  ClickFeedbackDrawing.h  KnobDrawing.h  MatildaBackground.h  MatildaImages.h  MatildaLayout.h  MatildaLookAndFeel.cpp  MiniGridLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReactShellLayout.h  ShellGlassDrawing.h  UiScale.h
matilda/standalone/Source/Components/: GemCell.cpp  GemGrid.cpp  HeroCanvas.cpp  HeroCanvas.h  LayerCrystalBar.cpp  LayerOverview.cpp  LayerPathView.cpp  LayerPathView.h  MatildaShellPanel.cpp  MovementSelector.h  NativePluginFrame.cpp  NativePluginFrame.h  QuantisePanel.h  ShellChrome.h  StepPathStrip.cpp  TransportBar.cpp  TransportBar.h  UiResizeGrip.cpp  UiResizeGrip.h
matilda/standalone/Source/Engine/: PatchStore.cpp  PatchStore.h  SequencerEngine.cpp  SequencerState.h
teleiso/: __init__.py  compiler.py  patterns.py
